--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
   ],
   "devDependencies": {
     "jquery": "^3.2.1",
-    "jquery-validation": "^1.17.0"
+    "jquery-validation": "^1.17.0",
+    "fancybox": "^3.2.1"
   },
   "dependencies": {
     "bxslider": "*"
